# i18n-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE.md  Makefile  README.md  conanfile.py  conanfile.txt  i18n++Use.cmake
clang/: .gitignore  CMakeLists.txt  action.cpp  action.h  action.ipp  attr.cpp  plugin.cpp  tool.cpp
common/: ast.hpp  merge.cpp  write_po.cpp
example/: CMakeLists.txt  guessing.cpp
include/: i18n.hpp
include/i18n/: base.hpp  simple.hpp
lib/: write_po.cpp
merge/: .gitignore  CMakeLists.txt  ast_adapted.hpp  config.hpp  main.cpp  merge.cpp  merge.hpp  messages.cpp  messages.hpp  messages.ipp
runtime/: i18n.hpp
runtime/i18n/: base.hpp  simple.hpp
tests/: CMakeLists.txt  readme.cpp  simple.cpp  tests.reference.pot
tests/de_DE/LC_MESSAGES/: testcases.mo  testcases.po
